Attempts to use os s2i incremental build.

--- a/nodejs-mongodb-secret.yaml
+++ b/nodejs-mongodb-secret.yaml
@@ -71,6 +71,7 @@ objects:
           kind: ImageStreamTag
           name: nodejs:0.10
           namespace: openshift
+        incremental: true
       type: Source
     triggers:
     - type: ImageChange
