--- a/nodejs-mongodb-secret.yaml
+++ b/nodejs-mongodb-secret.yaml
@@ -41,9 +41,9 @@ objects:
 - apiVersion: v1
   kind: ImageStream
   metadata:
-    name: node
+    name: abbr-node
   spec:
-    dockerImageRepository: node
+    dockerImageRepository: abbr/node
 - apiVersion: v1
   kind: BuildConfig
   metadata:
@@ -61,17 +61,17 @@ objects:
         ref: ${SOURCE_REPOSITORY_REF}
         uri: ${SOURCE_REPOSITORY_URL}
       type: Git
-      secrets:
-        secret:
-          name: ${SECRET_NAME}
-        destinationDir: ${SECRET_DIR}
     strategy:
       sourceStrategy:
         from:
           kind: ImageStreamTag
-          name: nodejs:0.10
-          namespace: openshift
+          name: abbr-node:latest
         incremental: true
+        env:
+          - name: SECRET_NAME
+            value: ${SECRET_NAME}
+          - name: SECRET_VALUE
+            value: ${SECRET_VALUE}
       type: Source
     triggers:
     - type: ImageChange
